# OperatingSystems_Lab3

./: CMakeLists.txt  README.md  ioctl_vma.h  load_driver.sh  sign_module.sh  structs.h
cmake/: FindKernelHeaders.cmake
kernel/: CMakeLists.txt  vma_driver.c
scripts/: key_creation.sh  key_installation.sh  load_driver.sh  sign_module.sh  unload_driver.sh  x509.genkey
user/: CMakeLists.txt  vma_user.c
